# SZU

./: .gitignore  LIO-SAM-Setup-Guide.md  RUN.md  check_env.sh  quick_test.sh  setup_lio_sam.sh  start_lio_sam.sh
qr_codes/: CMakeLists.txt  generate_aruco.py  test_qr.cpp  test_qr_simple.cpp
src/lio_sam/: CMakeLists.txt  package.xml
src/lio_sam/config/: params.yaml  qr_landmarks.yaml
src/lio_sam/include/: utility.h
src/lio_sam/launch/: run.launch  test_qr_detection.launch
src/lio_sam/launch/include/: module_qr_detection.launch
src/lio_sam/launch/include/config/: robot.urdf.xacro  rviz.rviz
src/lio_sam/msg/: qr_detection.msg
src/lio_sam/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  qrDetection.cpp
